# PatchArena

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  patcharena.toml.example  prepare.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/patcharena-cli/: Cargo.toml
crates/patcharena-cli/src/: args.rs  commands.rs  error.rs  lib.rs  main.rs  suite.rs
crates/patcharena-cli/tests/: cli.rs
crates/patcharena-core/: Cargo.toml
crates/patcharena-core/src/: config.rs  error.rs  fs.rs  lib.rs  path.rs  result.rs  suite.rs  task.rs
crates/patcharena-core/tests/: public_api.rs
crates/patcharena-git/: Cargo.toml
crates/patcharena-git/src/: lib.rs
crates/patcharena-git/tests/: repository.rs
crates/patcharena-report/: Cargo.toml
crates/patcharena-report/src/: lib.rs  suite.rs
crates/patcharena-runner/: Cargo.toml
crates/patcharena-runner/src/: agent.rs  audit.rs  instructions.rs  lib.rs  orchestration.rs  process.rs  registry.rs  suite.rs
crates/patcharena-runner/src/agents/: claude.rs  codex.rs  custom.rs  gemini.rs  mod.rs
docs/: architecture.md  releasing.md  threat-model.md
docs/superpowers/plans/: 2026-07-14-benchmark-suites.md
docs/superpowers/specs/: 2026-07-14-benchmark-suites-design.md
examples/rust-basic/: README.md  suite.yaml  task.yaml
fixtures/broken-rust-project/: Cargo.toml  README.md
fixtures/broken-rust-project/src/: lib.rs
