[workspace]
members = [
    "crates/patcharena-cli",
    "crates/patcharena-core",
    "crates/patcharena-git",
    "crates/patcharena-report",
    "crates/patcharena-runner",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/lasder-ca/PatchArena"
homepage = "https://github.com/lasder-ca/PatchArena"
keywords = ["ai", "benchmark", "cli", "git", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.31", features = ["process", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
shell-words = "1.1"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.46", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.17", features = ["serde", "v4"] }

assert_cmd = "2.0"
predicates = "3.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
