[package]
name = "patcharena-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reproducible benchmark CLI for AI coding agents on real repositories"

[[bin]]
name = "patcharena"
path = "src/main.rs"

[dependencies]
clap.workspace = true
patcharena-core = { path = "../patcharena-core" }
patcharena-git = { path = "../patcharena-git" }
patcharena-report = { path = "../patcharena-report" }
patcharena-runner = { path = "../patcharena-runner" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
chrono.workspace = true
predicates.workspace = true
uuid.workspace = true

[lints]
workspace = true
