[package]
name = "patcharena-core"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared data model, validation, and persistence for PatchArena"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
shell-words.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
