[package]
name = "patcharena-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Safe Git repository and detached worktree operations for PatchArena"

[dependencies]
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
