[package]
name = "patcharena-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Comparison and self-contained report generation for PatchArena"

[dependencies]
patcharena-core = { path = "../patcharena-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true

[lints]
workspace = true
